--- a/composer.json
+++ b/composer.json
@@ -1,4 +1,9 @@
 {
+    "name": "JaredSpb/php-tokenizer",
+    "description": "This package provides a simple standalone regular expressions powered tokenizer.",
+    "require": {
+        "php": ">=7.4"
+    },
     "require-dev": {
         "phpunit/phpunit": "^10"
     },
